2009-02-25  reedom  <fujinaka.tohru@gmail.com>
        
        * [FIX] With HTTP server running on Windows GEBEN failed to
                create script file copies.
        * [FIX] Now `eval' command works against PHP(Xdebug) same as
                before.
        
2009-02-07  reedom  <fujinaka.tohru@gmail.com>

        * [FIX] Suppressed unwanted focus changing: when the context
                variable buffer was visible in any window, the focus was
                moved from the debugging buffer to the context variable
                buffer after proceeding any continuous command.

2009-01-22  reedom  <fujinaka.tohru@gmail.com>

        * [FIX] Bug in Makefile: cannot byte-compile geben.el if the
                working directory is not one of the Emacs' default
                directories.
        
2009-01-10  reedom  <fujinaka.tohru@gmail.com>

        * [FIX] Implemented `geben-quit-window'
        * [FIX] Type mismatch error was occurred in breakpoint list mode
                when any breakpoint deletion was executed.
        
2009-01-08  reedom  <fujinaka.tohru@gmail.com>

        * [CHG] Redesigned.
        * [CHG] Make not to require an external DBGp client program.
        
2008-11-06  reedom  <fujinaka.tohru@gmail.com>

        * [FIX] When setting breakpoint which needed fileuri against
                remote script file interactively, GEBEN asked with
                invalid fileuri as a default.
        * [FIX] Once debugger engine passed invalid fileuri, which
                have http:// scheme instead of file://, GEBEN made
                Emacs raise exceptions at exitting Emacs.
        
2008-11-04  reedom  <fujinaka.tohru@gmail.com>

        * [ADD] Added Makefile.
        * [ADD] New commands `geben-mode-help' and similar to display
                description and key bindings of GEBEN's each mode.
        * [CHG] Face definition: `geben-backtrace-fileuri'
        * [CHG] Face definition: `geben-breakpoint-face'
        