@@ -2532,7 +2532,7 @@ The buffer commands are:
 	(setf (geben-session-stack session) (xml-get-children msg 'stack))
 	(let* ((stack (car (xml-get-children msg 'stack)))
 	       (fileuri (xml-get-attribute-or-nil stack 'filename))
-	       (lineno (xml-get-attribute-or-nil stack'lineno)))
+	       (lineno (xml-get-attribute-or-nil stack 'lineno)))
 	  (and fileuri lineno
 	       (geben-session-cursor-update session fileuri lineno)))
 	(run-hook-with-args 'geben-dbgp-stack-update-hook
@@ -2947,8 +2947,8 @@ of the function is passed to feature_set DBGp command."
 
   ;; evaluation
   (define-key geben-mode-map "e" 'geben-eval-expression)
+  ;;(define-key geben-mode-map "E" 'geben-eval-current-word)
   ;;(define-key geben-mode-map "\C-x\C-e" 'geben-eval-last-sexp)
-  ;;(define-key geben-mode-map "E" 'geben-visit-eval-list)
 
   ;; views
   (define-key geben-mode-map "w" 'geben-where)
@@ -3356,6 +3356,14 @@ Key mapping and other information is described its help page."
 				 nil nil nil 'geben-eval-history))))
   (geben-with-current-session session
     (geben-dbgp-command-eval session expr)))
+
+(defun geben-eval-current-word ()
+  "Evaluate a word at where the cursor is pointing."
+  (interactive)
+  (let ((expr (current-word)))
+    (when expr
+      (geben-with-current-session session
+	(geben-dbgp-command-eval session expr)))))
 
 (defun geben-open-file (fileuri)
   "Open a debugger server side file specified by FILEURI.
