@@ -1,3 +1,7 @@
+2009-04-30  reedom  <fujinaka.tohru@gmail.com>
+
+        * [ADD] Add a new command `geben-eval-current-word'.
+
 2009-02-25  reedom  <fujinaka.tohru@gmail.com>
         
         * [FIX] With HTTP server running on Windows GEBEN failed to
